--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,126 +1,91 @@
 body,
 html {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Sriracha', cursive;
     padding: 0;
     margin: 0;
-    /* background-color: rgba(24, 23, 23, 0.938) */
+   
     box-sizing: border-box;
   
+}
+
+body h2{
+    color: red;
+}
+
+body p {
+    font-size: 20px;
 }
 
 .clear {
     clear: both;
 }
-/* header */
-header{
-   
-    background-image: url('../img/backgroundhoavan.jpg');
-    width: 100%;
-    height:775px;
-    opacity: 1;
-    font-family: 'Pacifico', cursive;
-}
 
-header nav ul li a{
-    color: red !important;
-    font-size: 25px;
-}
-
-h2{
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-    font-size: 4rem;
-    padding: 80px 50px;
-    text-rendering: optimizeLegibility;
-    color: #b50505;
-    text-shadow: 4px 4px 0px #d5d5d5, 7px 7px 0px rgba(0, 0, 0, 0.2);
-} 
-
-
-
-
-.selector-for-some-widget {
-    box-sizing: content-box;
-}
-
-.IBSENNavbar .navbar-nav .nav-item {
-    margin-left: 40px;
-}
-
-.IBSENNavbar .navbar-nav .nav-item::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    display: block;
-
-    background: white;
-    transition: all 0.5s;
-}
-.IBSENNavbar .navbar-nav .nav-item:hover::after {
-    width: 100%;
-    box-shadow: 0 0 20px 5px white;
-}
-
-.IBSENNavbar .navbar-nav  .active::after {
-    
-    width: 100%;
-}
-
- header .IBSENNavbar img{
-     width: 30%;
- }
-
- /* carousel */
-/* .IBSEN_carousel .IBSEN_carouselContent .carousel-inner .carousel-item img{
-    width: 100% !important;
-
-} */
-
-.IBSEN_carousel .IBSEN_carouselContent .carousel-inner .carousel-item img{
-    width: 100% !important;
-    
-
+.active1{
+    background-color: rgba(255, 255, 0, 0.589);
+    padding:2px;
 }
 
 /* total */
+.total{
+
+    margin-bottom:50px;
+    padding:0 50px;
+}
 .total a{
     text-decoration: none;
     transition: all 0.5s;
     color: rgba(0, 0, 0, 0.808);
 }
 
-.total a h4{
-    font-weight: 700;
+.total_text p {
+   
+    font-size: 20px;
 }
+
+    .total a h4 {
+        margin-top: 10px;
+        font-weight: 700;
+        
+    }
 
 .total a:hover{
     color: rgb(185, 15, 15);
 }
 
 
+
+
+
 /* carousel */
-#carousel-item_black i{
-    font-size: 40px;
-    color: white;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    border-radius: 50%;
-    text-align: center;
-    border: solid 3px white;
+.Carousel img{
+    width: 100%;
+}
 
+.Carousel{
+    padding: 0;
+    margin: 0;
+}
+
+.Carousel .Carousel_text{
     position: absolute;
-    top: 45%;
-    left: 45%;
-     
-    opacity: 0;
-    transition: all linear 0.5s;
+    bottom: -10%;
+    left: 25%;
 }
 
+.Carousel_text{
+    text-align: center;
+    color: red;
 
-.carousel-inner .active :hover  #carousel-item_black i{
-    opacity: 1;
+}
+.Carousel_text h2{
+   
+    font-size:50px;
 }
 
+.Carousel_text p{
+    color: red;
+    font-size:40px;
+}
 /* intro_action */
 .intro_action{
     background: #ffebed;
@@ -199,7 +164,7 @@ h2{
 }
 
 
-.story h2{
+.story h2, .news h2{
     padding: 50px 0;
 }
 /* partner */
@@ -232,6 +197,13 @@ h2{
     padding: 50px 0;
 }
 
+/* form text*/
+
+.form-text {
+    font-family: 'Dancing Script', cursive;
+    font-size: 23px;
+    font-weight: 500;
+}
 /* footer */
 /* footer */
 footer{
@@ -241,24 +213,36 @@ footer{
     background-color: #ffebed;
     color: black;
 }
-
-.footer-button{
+.footer-form textarea{
+    outline: none;
+}
+.footer-form textarea[placeholder] {
+   
+    padding-left: 10px;
+    padding-top: 5px;
+}
+.footer-button {
     float: right;
     margin-top: 5%;
-    height: 35px;
+    height: 38px;
     width: 90px;
     text-align: center;
+    letter-spacing:1px;
     color: #ea2227;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
-    border-radius: 10px;
-    border: 1px solid #ea2227;
+    border-radius: 5px;
+    border: 2px solid #ecf0f1;
     background: #fff;
-    font-family: 'calibri bold';
-  }
+    
+    transition: all .3s;
+}
 
-  .footer-button:hover{color: white; background: #ea2227;}
+    .footer-button:hover {
+        color: white;
+        background: #eb4d4b;
+    }
 
 .toTop
 {
@@ -270,9 +254,9 @@ footer{
     color: red;
     border: 1px solid red;
     
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
     border-radius: 50%;
     text-align: center;
 
@@ -280,6 +264,7 @@ footer{
     visibility: hidden;
 
 }
+
 
 footer .footer_left img{
     width: 100% !important;
@@ -308,13 +293,25 @@ footer a{
     color: white;
 }
 
-footer a:hover{
-    color: yellow;
-    text-decoration: none;
+    footer a:hover {
+        color: #fff200;
+        text-decoration: none;
+    }
+
+
+footer h3 {
+    font-family: 'Pacifico', cursive;
+    font-weight: 300;
+    font-size: 30px;
+}
+footer ul li a {
+    font-family: 'Dancing Script', cursive;
+    font-size: 25px;
 }
 
-footer h3:hover{
-    color: yellow;
+footer h3:hover {
+    color: #fff200;
+    cursor: pointer;
 }
 
 
@@ -323,60 +320,54 @@ footer h3:hover{
     visibility: visible;
     opacity: 1;
 }
-
-
-
-
-
-@media screen and (min-width:800px) and (max-width:1280px){
-
-
-    /* .intro_action .intro_content #intro_item p{
-        font-size: 11px;
-    } */
-
+img{
+    cursor: pointer;
 }
 
-@media screen and (max-width:768px){
-    header{
+
+
+
+/* @media screen and (min-width:800px) and (max-width:1280px){
+
+
+    .Carousel .Carousel_text{
+        position: absolute;
+        top:48%;
+        left: 20%;
+    }
+
+    .Carousel_text h2{
    
-        background-image: url('../img/backgroundhoavan.jpg');
-        width: 100%;
-        height:650px;
+        font-size:30px;
+    }
+    
+    .Carousel_text p{
+        color: red;
+        font-size:20px;
+    }
+
+} */
+
+@media screen and (max-width:768px){
+
+
+
+
+    .Carousel .Carousel_text{
+        position: absolute;
+        top:47%;
+        left: 20%;
         
     }
-    .IBS_Carousel .IBS_mainCarousel {
-        margin-top: 30px;
-    }
-
-    header .IBSENNavbar img{
-        width:20%;
-    }
-    header h3{
-        font-size: 15px;
-    }
-    /* intr0_action */
-
-
-    #carousel-item_black i{
-        font-size: 30px;
-        color: white;
-        width: 80px;
-        height: 80px;
-        line-height: 80px;
-        border-radius: 50%;
-        text-align: center;
-        border: solid 3px white;
     
-        position: absolute;
-        top: 35%;
-        left: 40%;
-         
-        opacity: 0;
-        transition: all linear 0.5s;
+    .Carousel_text h2{
+   
+        font-size:30px;
     }
-    .carousel-inner .active :hover  #carousel-item_black i{
-        opacity: 1;
+    
+    .Carousel_text p{
+        color: red;
+        font-size:20px;
     }
 
     .intro_action{
@@ -398,46 +389,35 @@ footer h3:hover{
 
 @media screen and (max-width:576px){
     /* header */
-    header{
-   
-        background-image: url('../img/backgroundhoavan.jpg');
-        width: 100%;
-        height:450px;
-        
+
+    header .h3, header p{
+        font-size:15px;
     }
+
+    header .topNav-container .side-bar h3{
+        font-size: 17px;
+    }
+
 
     header .IBSENNavbar img{
         width:10%;
     }
 
     /* carousel */
-    .IBS_Carousel .IBS_mainCarousel {
-        margin-top: 30px;
-    }
-
-    header h3{
-        font-size: 14px;
-    }
-
-    #carousel-item_black i{
-        font-size: 20px;
-        color: white;
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-        border-radius: 50%;
-        text-align: center;
-        border: solid 3px white;
-    
+    .Carousel .Carousel_text{
         position: absolute;
-        top: 35%;
-        left: 45%;
-         
-        opacity: 0;
-        transition: all linear 0.5s;
+        top:26%;
+        left: 10%;
     }
-    .carousel-inner .active :hover  #carousel-item_black i{
-        opacity: 1;
+
+    .Carousel_text h2{
+   
+        font-size:20px;
+    }
+    
+    .Carousel_text p{
+        color: red;
+        font-size:12px;
     }
 
     /* intro */
@@ -455,6 +435,11 @@ footer h3:hover{
     .IBS_partner .IBS_partnerImg img{
         width: 50%;
     }
+
+    footer .footer_left img{
+        width: 40% !important;
+    }
+
 
 }
 
