--- a/CSS/topnav.css
+++ b/CSS/topnav.css
@@ -55,7 +55,7 @@
 }
 .side-bar li{
   list-style-type: none;
-  margin: 30px 0;
+  margin: 17px 0;
   margin-left: 15px;
 }
 .side-bar li a{
@@ -107,7 +107,7 @@
 }
 .topnav--fixed .logo img{
   width: 4%;
-  margin-left: 5%;
+  
 }
 .topnav--fixed .slogan h1{
   font-size: 20px;
@@ -128,6 +128,11 @@ header   h1{
   header .topnav .slogan h1{
     font-size:22px;
     padding: 0;
+  }
+
+  .topnav .logo img{
+    width: 10%;
+    float: left;
   }
 
   .search-bar{
