--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,8 +13,43 @@ body h2{
 }
 
 
+/*  */
+
+.ml1 {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .ml1 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  
+  .ml1 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.1em;
+    padding-right: 0.05em;
+    padding-bottom: 0.15em;
+  }
+  
+  .ml1 .line {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: red;
+    transform-origin: 0 0;
+  }
+  
+  .ml1 .line1 { top: 0; }
+  .ml1 .line2 { bottom: 0; }
 
 
+
+
+/* / */
 .clear {
     clear: both;
 }
@@ -50,6 +85,11 @@ body h2{
 .total a:hover{
     color: rgb(185, 15, 15);
 }
+
+.ml3 {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
 
 
 
@@ -411,10 +451,19 @@ img{
         width: 50%;
     }
 
-    footer .footer_left img{
-        width: 40% !important;
+    footer .footer_connect  img{
+        width: 50px;
+        height: 50px;
+
     }
 
+    .ml1 span{
+        font-size: 15px;
+    }
+/* 
+    footer .footer_intro .ml3{
+        font-size:10px;
+    } */
 
 }
 
